--- a/package.json
+++ b/package.json
@@ -7,27 +7,27 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "author": "Jitendra Giriya",
+  "author": "pratheesh",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.22.0",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "cloudinary": "^1.27.1",
-    "config": "^3.3.6",
-    "cookie-parser": "^1.4.5",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.34.0",
+    "config": "^3.3.9",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
-    "express-session": "^1.17.2",
-    "express-validator": "^6.12.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.14",
-    "nodemailer": "^6.6.3",
-    "stripe": "^8.184.0",
-    "validator": "^13.6.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.15.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.10.0",
+    "nodemailer": "^6.9.1",
+    "stripe": "^11.12.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
